- Impliment dead queue and retry as per previous pull request, with up to date consumer

--- a/example.conf
+++ b/example.conf
@@ -17,6 +17,14 @@ autodelete=Off
 type=direct
 durable=On
 
+[deadexchange]
+name = name
+autodelete=Off
+type=fanout
+durable=true
+queue=taskerrors
+retry=3
+
 [queuesettings]
 routingkey=somekey
 messagettl=30000
@@ -26,3 +34,4 @@ deadLetterroutingkey=someroutingkey
 [logs]
 error = /tmp/error.log
 info = /tmp/info.log
+rpc = https://cims2.dev.nucleus.be/rpc/index.php
